--- a/src/components/style.css
+++ b/src/components/style.css
@@ -25,12 +25,8 @@ a {
 }
 
 .book {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: left;
+  text-align: left;
   box-shadow: 1px 1px 5px black;
-  width: 80%;
   margin: 1rem auto;
   height: 6rem;
   padding: 1.5rem;
@@ -38,8 +34,6 @@ a {
   justify-content: space-evenly;
   flex-direction: column;
   width: 80%;
-  height: 100%;
-  
 }
 
 .button {
