--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ a {
   display: flex;
   justify-content: space-evenly;
   flex-direction: column;
-  width: 65rem;
+  width: 69rem;
   height: 10.6rem;
   background-color: white;
   padding: 1rem 1.688rem;
@@ -64,11 +64,11 @@ a {
 
 .form {
   border-top: 1px solid lightgray;
-  width: 65rem;
+  width: 69rem;
   margin: 3rem auto;
   text-align: left;
+  padding: 1rem 0;
   border-radius: 2px;
-  padding: 0.3rem 0.3rem 2rem 0.3rem;
   background-color: #f5f6fa;
 }
 
